Bug fixes : 1. Fix for 4 buttons click on edit profile/public profile page on mobile screen. 2. Number of not recommended reviews fix. 3. Edit icon on public profile URL on edit profile page for mobile scree.

--- a/Source/SSWeb/src/main/webapp/resources/css/style-common.css
+++ b/Source/SSWeb/src/main/webapp/resources/css/style-common.css
@@ -6471,6 +6471,11 @@ tr.u-tbl-header td {
     white-space: nowrap;
 }
 
+.edit-pro-rat-txt {
+	width: 70%;
+	width: calc(100% - 58px);
+}
+
 .web-address-txt {
     line-height: 30px;
     padding-left: 5px;
